Update API Post: Authenticated - using Token